--- a/design/Neue/mobile.css
+++ b/design/Neue/mobile.css
@@ -3,6 +3,26 @@ body.conversationView #secondaryNav li.back {
     display: block;
 }
 
+body #composeWrap {
+    padding: 48px 0 0 0;
+}
+
+body #composeWrap #composeWindow {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    border: none;
+    padding: 10px;
+    
+    -webkit-border-radius: 0;
+       -moz-border-radius: 0;
+            border-radius: 0;
+    
+    -webkit-box-shadow: none;
+       -moz-box-shadow: none;
+            box-shadow: none;
+}
+
 body #secondaryNav {
     width: 100%;
     height: 48px;
@@ -38,6 +58,7 @@ body.conversationView #primaryNav {
 }
 
 body.conversationView #secondaryNav li.inbox,
+body.conversationView #secondaryNav li.compose,
 body.conversationView #secondaryNav li.labels,
 body.conversationView #secondaryNav li.search {
     display: none;
@@ -45,22 +66,21 @@ body.conversationView #secondaryNav li.search {
 
 body #conversation {
     margin: 0;
-}
-
-body .message {
-    right: -100%;
+    -webkit-transform: translate(100%, 0px);
+       -moz-transform: translate(100%, 0px);
+            transform: translate(100%, 0px);
     
-    -webkit-transition: right 0.2s cubic-bezier(0.0, 0.0, 0.0, 1.0);
-       -moz-transition: right 0.2s cubic-bezier(0.0, 0.0, 0.0, 1.0);
-            transition: right 0.2s cubic-bezier(0.0, 0.0, 0.0, 1.0);
+    -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.0, 0.0, 0.0, 1.0);
+       -moz-transition: -moz-transform 0.2s cubic-bezier(0.0, 0.0, 0.0, 1.0);
+            transition: transform 0.2s cubic-bezier(0.0, 0.0, 0.0, 1.0);
 }
 
-body.conversationView .message {
+body.conversationView #conversation {
     right: 0;
     
-    -webkit-transition: right 0.2s cubic-bezier(0.0, 0.0, 0.0, 1.0);
-       -moz-transition: right 0.2s cubic-bezier(0.0, 0.0, 0.0, 1.0);
-            transition: right 0.2s cubic-bezier(0.0, 0.0, 0.0, 1.0);
+    -webkit-transform: translate(0px, 0px);
+       -moz-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
 }
 
 body .message .fullMsgHeader {
