--- a/design/Neue/style.css
+++ b/design/Neue/style.css
@@ -65,6 +65,88 @@ button:active {
             box-shadow: 0 0 2px 1px rgba(0,0,0,0.25) inset;
 }
 
+#composeWrap {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: block;
+    z-index: 102;
+    background-color: transparent;
+    padding: 48px 48px 48px 96px;
+    
+    -webkit-transform: translate(0px, 100%);
+       -moz-transform: translate(0px, 100%);
+            transform: translate(0px, 100%);
+    
+    -webkit-transition: -webkit-transform 0.2s, background-color 0.1s ease-out;
+       -moz-transition: -moz-transform 0.2s, background-color 0.1s ease-out;
+            transition: transform 0.2s, background-color 0.1s ease-out;
+}
+
+#composeWrap.open {
+    background-color: rgba(255,255,255,0.75);
+
+    -webkit-transform: translate(0px, 0px);
+       -moz-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+            
+    -webkit-transition: -webkit-transform 0.2s, background-color 1s 0.5s ease-out;
+       -moz-transition: -moz-transform 0.2s, background-color 1s 0.5s ease-out;
+            transition: transform 0.2s, background-color 1s 0.5 ease-out;
+}
+
+    #composeWrap #composeWindow {
+        position: relative;
+        height: 100%;
+        width: 100%;
+        background-color: #fff;
+        border: 1px solid #aaa;
+        padding: 24px;
+        
+        -webkit-border-radius: 2px;
+           -moz-border-radius: 2px;
+                border-radius: 2px;
+        
+        -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
+           -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
+                box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
+    }
+    
+    #composeWrap .inputWrap {
+        border-bottom: 1px solid #222;
+        padding: 0 0 5px 0;
+        margin: 0 0 21px 0;
+    }
+    
+    #composeWrap label {
+        margin: 0 10px 0 0;
+        font-size: 18px;
+    }
+    
+    #composeWrap input[type=text],
+    #composeWrap textarea {
+        border: none;
+        font-size: 18px;
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
+
+    #composeWrap textarea {
+        padding: 10px;
+        background-color: #f2f2f2;
+        border: none;
+        color: #222;
+        margin: 0 0 21px 0;
+        width: 100%;
+        
+        -webkit-border-radius: 2px;
+           -moz-border-radius: 2px;
+                border-radius: 2px;
+    }
+    
+    button.save {
+        margin: 0 5px 0 0;
+    }
+
 #secondaryNav {
     top: 0;
     left: 0;
@@ -144,6 +226,7 @@ button:active {
     #primaryNav #listWrap {
         position: relative;
         width: 640px;
+        height: 100%;
         left: 0;
         
         -webkit-transition: left 0.2s cubic-bezier(0.0, 0.0, 0.0, 1.0);
@@ -162,6 +245,7 @@ button:active {
     #primaryNav section#search {
         display: block;
         width: 100%;
+        height: auto;
         float: none;
         padding: 10px;
         border-bottom: 1px solid #e6e6e6;
@@ -211,6 +295,7 @@ button:active {
     #primaryNav section {
         float: left;
         width: 50%;
+        height: 100%;
         display: inline-block;
         overflow-y: auto;
         overflow-x: hidden;
@@ -298,6 +383,10 @@ button:active {
     display: block;
     margin: 0 0 0 368px;
     background-color: #f2f2f2;
+    position: fixed;
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 100%;
 }
 
     .message {
@@ -305,7 +394,7 @@ button:active {
         padding: 0 10px;
         position: relative;
         opacity: 0;
-        min-height: 100%;
+        margin-bottom: 48px;
     }
     
     body.conversationView .message {
@@ -415,7 +504,6 @@ button:active {
 	-webkit-box-flex: 0;
 	-moz-box-flex: 0;
 	box-flex: 0;
-	display: block;
 }
  
 .spacer {
