--- a/design/Neue-pages/page.css
+++ b/design/Neue-pages/page.css
@@ -71,6 +71,10 @@ pre {
     white-space: pre-wrap; /* CSS 2.1 Addition */
 }
 
+.primary {
+    border-right: 1px solid #aaa;
+}
+
 div[data-role="page"] {
     left: -321px;
     height: 100%;
@@ -115,6 +119,7 @@ div[data-role="page"] {
         position: relative;
         z-index: 101;
         border-bottom: 1px solid #aaa;
+        background-color: #fff;
         
         -webkit-box-shadow: 0 0 2px rgba(0,0,0,0.15);
            -moz-box-shadow: 0 0 2px rgba(0,0,0,0.15);
@@ -123,6 +128,8 @@ div[data-role="page"] {
     
     div[data-role="page"] div[data-role="header"] h1 {
         font-size: 12px;
+        line-height: 24px;
+        text-transform: lowercase;
     }
 
 
@@ -143,14 +150,14 @@ div[data-role="page"] {
     
     div[data-role="page"] ul li {
         background-color: #fff;
-        padding: 10px;
+        padding: 14px 10px;
         border-bottom: 1px solid #e6e6e6;
         border-top: 1px solid #e6e6e6;
         margin-top: -1px;
         cursor: pointer;
         
-        background-image: -moz-linear-gradient(top, #fff 0%, #fafafa 100%);
-        background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fff), color-stop(100%, #fafafa));
+        background-image: -moz-linear-gradient(top, #fafafa 0%, #f2f2f2 100%);
+        background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fafafa), color-stop(100%, #f2f2f2));
     }
 
     div[data-role="page"] ul li:hover,
@@ -191,7 +198,7 @@ div#apptoolbar {
 }
     
     div#apptoolbar ul {
-        margin: 31px 0 0 0;
+        margin: 10px 0 0 0;
     }
 
 div[data-role="toolbar"] li {
@@ -226,8 +233,9 @@ div[data-role="toolbar"] li.search {
 }
 
 div[data-role="toolbar"] li.settings {
-    background-position: center center;
     background-image: url("i/sidebar_settings.png");
+    position: absolute;
+    bottom: 0;
 }
 
 div[data-role="toolbar"] li.back {
@@ -293,18 +301,24 @@ div#search[data-role="toolbar"] {
     height: 100%;
     position: fixed;
     overflow: hidden;
-    margin: 0 0 0 48px;
-    background-color: #fff;
-    border-right: 1px solid #aaa;
+    padding: 0 0 0 48px;
+    background-color: #f2f2f2;
     
     -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25);
        -moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25);
             box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25);
 }
 
-
+    li.messagePrev .subjectWrap {
+        margin-top: 2px;
+    }
+    
     li.messagePrev {
         color: #888;
+    }
+    
+    li.messagePrev input {
+        margin: 0 5px 0 0;
     }
     
     li.messagePrev .msgCount {
@@ -312,7 +326,7 @@ div#search[data-role="toolbar"] {
         border-radius: 2px 2px 2px 2px;
         color: #FFFFFF;
         font-weight: bold;
-        margin: 0 3px;
+        margin: 0 0 0 5px;
         padding: 0 5px;
     }
     
@@ -321,20 +335,45 @@ div#search[data-role="toolbar"] {
     }
     
     li.messagePrev .msgHeader .sender {
-        color: #2EA4FF;
+        color: #666;
         display: block;
-        /*font-weight: bold;*/
+        font-weight: bold;
         margin-right: 5px;
     }
 
-    li.messagePrev .msgHeader .starred {
-        color: blue;
-        font-weight: bold;
+    li.messagePrev .msgHeader .star {
+        width: 16px;
+        height: 16px;
+        background-image: url('i/unstarred.png');
+        background-repeat: no-repeat;
+        background-position: center center;
+        display: inline-block;
+        vertical-align: text-bottom;
+    }
+    
+    li.messagePrev .msgHeader .star.starred {
+        background-image: url('i/starred.png');
     }
 
-    div[data-role="page"] li.msg_unseen .sender,
-    div[data-role="page"] li.msg_unseen .subject {
+    div[data-role="page"] li.msg_unseen {
+        background-image: none;
+    }
+
+    div[data-role="page"] li.msg_unseen .msgCount {
+        background-color: #444;
+    }
+    
+    div[data-role="page"] li.msg_unseen .date {
+        color: #2D803F;
+    }
+
+    div[data-role="page"] li.msg_unseen .sender {
+        color: #2EA4FF;
         font-weight: bold;
+    }
+    
+    div[data-role="page"] li.msg_unseen .subject {
+        color: #666;
     }
 
 
@@ -419,6 +458,10 @@ div#search[data-role="toolbar"] {
             color: #444444;
             margin-bottom: 21px;
         }
+        
+        .theBody {
+            overflow-x: hidden;
+        }
 
 div[data-role="page"].popup {
     left: 0px;
@@ -473,6 +516,7 @@ div[data-role="page"].popup {
     
     #compose .compose-inner {
         padding: 24px;
+        height: 100%;
     }
 
     #compose .inputWrap {
@@ -484,6 +528,11 @@ div[data-role="page"].popup {
     #compose label {
         margin: 0 10px 0 0;
         font-size: 18px;
+    }
+    
+    #compose form {
+        width: 100%;
+        height: 100%;
     }
     
     #compose input[type=text],
@@ -509,14 +558,77 @@ div[data-role="page"].popup {
     button.save {
         margin: 0 5px 0 0;
     }
+    
+    button.refresh {
+        width: 28px;
+        height: 24px;
+        padding: 0;
+        background-image: url('i/reload.png'), -moz-linear-gradient(top, #fafafa 0%, #f2f2f2 100%);
+        background-image: url('i/reload.png'), -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fafafa), color-stop(100%, #f2f2f2));
+        background-repeat: no-repeat, repeat;
+        background-position: center center, top left;
+    }
 
-#settings div {
-    padding: 10px;
+#settings {
+    background-color: #333;
+    border-right: 1px solid #000;
+}
+
+#settings ul.settingsList {
+    background-color: transparent;
+}
+
+#settings .settingsList li,
+#settings .settingsList li:hover {
+    padding: 14px 10px;
+    background-image: none;
+    border: none;
+    margin: 0;
+    cursor: inherit;
+    background-color: transparent;
 }
 
 #settings label {
-    margin-right: 10px;
+    margin-right: 5px;
+    color: #fff;
+    width: 75px;
+    font-weight: bold;
+    text-transform: capitalize;
+    line-height: 26px;
 }
+
+#settings input {
+    font-size: 12px;
+    padding: 5px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #000;
+    font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif;
+    outline: none;
+    color: #222;
+    font-weight: bold;
+    
+    -webkit-border-radius: 2px;
+       -moz-border-radius: 2px;
+            border-radius: 2px;
+}
+
+#settings input:focus {
+    border-color: #2EA4FF;
+
+    -webkit-box-shadow: 0 0 3px rgba(46,164,255,1) inset;
+       -moz-box-shadow: 0 0 3px rgba(46,164,255,1) inset;
+            box-shadow: 0 0 3px rgba(46,164,255,1) inset;
+}
+
+#settings button {
+    border-color: #000;
+    
+    -webkit-border-radius: 0px;
+       -moz-border-radius: 0px;
+            border-radius: 0px;
+}
+    
 
 
 
