Add a function.prototype.bind for safari, redo the cards to create new cards for each forward action with a unique URL and use pushState with popstate events to get back navigation. Did some prettying up of the UI but still needs much more love.

--- a/clients/firefox/style.css
+++ b/clients/firefox/style.css
@@ -121,7 +121,13 @@ button {
 }
 
 
-#conversationMessages {
+.peepInfoPic {
+  width: 48px;
+  height: 48px;
+}
+
+
+.conversationMessages {
   list-style: none;
 }
 
