Notification is in, goes back to start, there is a link to the new conversation in the start card.

--- a/clients/firefox/style.css
+++ b/clients/firefox/style.css
@@ -79,6 +79,21 @@ button {
   left: 0;
 }
 
+#notify {
+  display: none;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  width: 20px;
+  height: 20px;
+  line-height: 16px;
+  border: 1px solid red;
+  color: red;
+}
+
+#notify.active {
+  display: block;
+}
 
 #cardContainer {
   overflow: hidden;
