--- a/clients/firefox/style.css
+++ b/clients/firefox/style.css
@@ -108,6 +108,8 @@ button {
 
 .card {
   float: left;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .card > a {
@@ -150,6 +152,13 @@ button {
 
 .compose {
   padding: 0 10px;
+  height: 20px;
+}
+
+.compose textarea {
+  width: 100%;
+  height: 20px;
+  line-height: 20px;
 }
 
 /* START chat bubble styles */
@@ -227,7 +236,7 @@ button {
     position: relative;
     top: 20px;
     padding: 15px 40px 30px 40px;
-    min-width: 300px;
+    min-width: 200px;
     border-width: 1px;
     border-style: solid;
     border-color: #c4c4c4 #b4b4b4 #a4a4a4 #b4b4b4;
