--- a/clients/firefox/style.css
+++ b/clients/firefox/style.css
@@ -61,12 +61,10 @@ button {
   border-top: 1px solid #e6e6e6;
   margin-top: -1px;
   cursor: pointer;
-  color: white;
   text-align: center;
   font-size: 20px;
-  background-color: #222;
-  background-image: -moz-linear-gradient(left, #222 0%, #1f1f1f 100%);
-  background-image: -webkit-gradient(linear, top left, top right, color-stop(0%, #222), color-stop(100%, #1f1f1f));
+  background: -moz-linear-gradient(top, #fefefe, #e6e6e6);
+  background: -webkit-gradient(linear, left top, left bottom, from(#fefefe), to(#e6e6e6));
 }
 
 .mblArrowButtonHead {
@@ -81,6 +79,11 @@ button {
 .mblArrowButtonNeck {
   position: absolute;
   left: 0;
+}
+
+.mblArrowButtonText {
+  color: #777777;
+  font-size: 16px;
 }
 
 #notify {
@@ -174,6 +177,11 @@ a.item.block {
   font-size: 12px;
   text-align: center;
   border-radius: 10px;
+}
+
+.tileImage {
+  width: 24px;
+  height: 24px;
 }
 
 .peepInfoPic {
