Remove up/down arrows in mobile firefox UI for jumping between text inputs, when those text inputs are on hidden cards.

--- a/clients/firefox/style.css
+++ b/clients/firefox/style.css
@@ -46,6 +46,14 @@ button {
   display: none;
 }
 
+/* Used by card.js to hide inputs on other cards
+  so that mobile firefox does not do the up/down arrow
+  controls over the screen.
+*/
+.inputHidden {
+  visibility: hidden;
+}
+
 #header {
   display: block;
   position: fixed;
