trying to get the server list displaying, need loggest hookup
It is extremely likely that an exception is being thrown by the
backside while processing the queryServers command.; ideally we
would like a loggest hookup of some type, but anything that ensures
that we see all our exceptions would be delightful.

Although in-browser loggest is slightly over the top in terms of
dependencies, I think it'll be worth it.  It probably wants its
own tab that is accessed hard-core.

--- a/clients/devui/lib/rddevui/tab-signup.css
+++ b/clients/devui/lib/rddevui/tab-signup.css
@@ -1,2 +1,10 @@
 /* tab signup! */
 
+#signup-tab {
+  #userInfoBlock, #emailInfoBlock, #serverListBlock {
+    border: 1px solid black;
+    margin: 1em;
+    padding: 1em;
+    border-radius: 4px;
+  }
+}
