fix signup process from moda
- dev UI signup mechanism now works (server redis keys appear)
- moda properly populates 'whoAmI' ServerInfo; it had regressed at some
  point and there was no test.  Now there is a test.

--- a/clients/devui/lib/rddevui/tab-signup.css
+++ b/clients/devui/lib/rddevui/tab-signup.css
@@ -7,4 +7,23 @@
     padding: 1em;
     border-radius: 4px;
   }
+
+  #errMsg: {
+    color: red;
+    font-size: 140%;
+  }
+}
+
+#server-info {
+  #root[selected="true"] {
+    font-weight: bold;
+    background-color: #ffc;
+  }
+
+  #urlBlock {
+    margin-right: 1em;
+  }
+  #urlBlock0, #dnBlock0 {
+    font-style: italic;
+  }
 }
