introduce error reps/queries, explicit auth failure, rawclient notif
Thanks to some manual nuking of the redis database, I managed to create
a situation where the client thought it was signed up with the server
but the server did not agree.  Accordingly, I:

- Made the authconn mechanism have the ability to convey why a
  connection was closed.
- Modified the authconn 'protocol' explicitly indicate whether
  authentication succeeded or failed, with failure resulting in a reason
  for the connection closing.
- Modified the mailstore server connection to convert the rejection from
  authentication failure into an explicit false value so it gets treated
  as an authentication failure rather than a generic failure.  The
  difference is that this allows us to explicitly say the server doesn't
  know who the client is.  We could perhaps be a bit more detailed about
  that case to avoid freaking the client out if we are experiencing
  transient problems.  (Our error hierarchy should be amenable to this.)
- Did a super-basic implementation of error tracking with queries that
  make it across to moda.  The errors currently can only be asserted,
  never revoked.  It will be a minor enhancement to make them removable.
- Modified notification king to be able to immediate generate
  notifications for certain namespaces rather than waiting for an update
  phase to complete.  This is appropriate for errors which may not have
  anything to do with the server or update phases.  It may be
  appropriate to perform some type of batching if we are in an update
  phase in the case we could experience lots of error deltas during an
  update phase.
- Modified the development UI to always open an error tab that is hooked
  up to the error query.
- Modified the development UI tabbox to be able to convey that a tab
  wants attention.
- Made the dev UI error tab request attention when a new error gets
  added.

--- a/clients/devui/lib/rddevui/tabs.css
+++ b/clients/devui/lib/rddevui/tabs.css
@@ -4,6 +4,7 @@
 @tab-border-color: black;
 @tab-border-radius: 4px;
 @tab-selected-color: #eeeeff;
+@tab-attention-color: #eeeeee;
 @tab-close-color: red;
 
 #tabbox {
@@ -46,6 +47,11 @@
     border-right: 1px solid white;
     background-color: @tab-selected-color;      
   }
+  #root[wantsAttention="true"] {
+    font-weight: bold;
+    background-color: @tab-attention-color;
+  }
+
   #root:focused {
     #label {
       outline: 1px @tab-border-color dotted;
