dev ui: accept connect requests, and it works! they become peeps!
Two known issues right now:
- Clicking on a peep to get their conversations dies; I apparently
  screwed that up.
- When I closed the list of requests to connect by clicking on the tab's
  X, wmsy experienced a focus loss glitch.  The tab was focused, so it
  could have been that, or a complicated destruction loop where the
  destruction of the header prior to the body for the tab caused us to
  try and refocus into the body and then things went south, etc.

--- a/clients/devui/lib/rddevui/tabs-common.css
+++ b/clients/devui/lib/rddevui/tabs-common.css
@@ -45,3 +45,44 @@
     width: 60em;
   }
 }
+
+#conn-request {
+  #peep, #server, #messageText {
+    display: block;
+  }
+  #peep {
+    font-weight: bold;
+  }
+  #messageText {
+    font-style: italic;
+  }
+}
+
+#accept-request-tab {
+  #overviewBlurb, #serverBlurb, #messageBlurb {
+    display: block;
+    margin: 0.5em 0;
+  }
+  /* real data that the user can't fake should be uniquely expressed */
+  /* anything the other user entered should be uniquely expressed */
+  #serverBlurb1 {
+    font-weight: bold;
+  }
+  #overviewBlurb1, #serverBlurb3, #messageBlurb1 {
+    font-weight: bold;
+    font-style: italic;
+  }
+  #overviewBlurb1:hover, #serverBlurb3:hover, #messageBlurb1:hover {
+    background-color: #ffcccc;
+  }
+
+
+  #localPocoBlock {
+    margin: 2em 0;
+  }
+
+  #buttonBar {
+    display: block;
+    margin-top: 1.5em;
+  }
+}
