conversation creation exercised by the dev ui, some glitches
A lot in this patch:
- moda and rawclient: expose the connection status
- dev ui: Add a global bar along the top that shows the current
  connection status.
- dev ui: improve the live set viewslice adapter to obey the viewslice
  contract more thoroughly
- dev ui: upgrade wmsy to be able to use the new (not fully tested)
  filtering viewslice decorator.
- dev ui: upgrade wmsy to get textarea support
- dev ui: add compose tab
- dev ui: add peep selector popup UI for compose tab's benefit.  It
  attempts to filter out already-added peeps, but may not be foolproof
  about it.  Check viewslice-filter.js for possible sources of error
  too (preferably by writing a unit test for it.)
- localdb: conversation blurb loading from disk was bad; fixed and
  moda-shakedown test upgraded to verify.  The db-loading logic needed
  to be adapted like the peep logic to use a stride since gendb
  currently returns its results in a redis-biased way by interleaving
  the index values with the names.

--- a/clients/devui/lib/rddevui/app.css
+++ b/clients/devui/lib/rddevui/app.css
@@ -1,1 +1,30 @@
-/* no css for this, actualike */
+#global-bar {
+  #root {
+    background-color: black;
+    border-bottom: 1px solid gray;
+  }
+
+  #widgets-item {
+    display: inline-block;
+  }
+}
+
+#gb-connected-status {
+  #root {
+    padding: 2px 4px;
+    font-weight: bold;
+  }
+  #root[connection="connected"] {
+    color: green;
+  }
+  #root[connection="connecting"] {
+    color: yellow;
+  }
+  #root[connection="disconnected"] {
+    color: red;
+  }
+  #root[connection="unauthorized"] {
+    color: red;
+    font-weight: 900;
+  }
+}
