--- a/clients/devui/lib/rddevui/tabs-common.css
+++ b/clients/devui/lib/rddevui/tabs-common.css
@@ -2,7 +2,7 @@
 
 #peep-blurb {
   #root {
-    min-width: 12em;
+    min-width: 16em;
     display: relative;
     padding: 3px 0px;
   }
@@ -19,6 +19,19 @@
     background-color: gray;
     border-radius: 8px;
     color: white;
+  }
+}
+
+#peep-inline {
+  #root {
+    display: inline-block;
+  }
+}
+
+#peep-selector-popup {
+  #root {
+    background-color: #ffffff;
+    padding: 8px;
   }
 }
 
